Arthur - Correções finais